--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -1,5 +1,5 @@
 <h2>Heroku Tutorial</h2>
-<h3>Setup Account</h3>
+<h3><strong>Step 10 - </strong>Setup Account</h3>
 <section>
 {{#if emberTutorial.checkValue_10}}
 <p></p>
@@ -8,7 +8,7 @@
 {{/if}}
 <div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_10}}</div>
 </section>
-<h3>Hook Github Project</h3>
+<h3><strong>Step 11 - </strong>Hook Github Project</h3>
 <section>
 {{#if emberTutorial.checkValue_11}}
 <p></p>
@@ -17,7 +17,7 @@
 {{/if}}
 <div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_11}}</div>
 </section>
-<h3>Live Website test </h3>
+<h3><strong>Step 12 - </strong>Live Website test </h3>
 <section>
 {{#if emberTutorial.checkValue_12}}
 <p></p>
