--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -1,5 +1,5 @@
-<h2>Testing Tutorial</h2>
-<h3>Project Tests</h3>
+<h2>Testing Tutorial</h2>                              <a href="#" target="_blank"> </a>
+<h3><strong>Step 7 - </strong>Project Tests</h3>
 <section>
 {{#if emberTutorial.checkValue_7}}
 <p></p>
@@ -8,7 +8,7 @@
 {{/if}}
 <div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_7}}</div>
 </section>
-<h3>TravisCI</h3>
+<h3><strong>Step 8 - </strong>TravisCI</h3>
 <section>
 {{#if emberTutorial.checkValue_8}}
 <p></p>
@@ -17,7 +17,7 @@
 {{/if}}
 <div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_8}}</div>
 </section>
-<h3>CodeClimate</h3>
+<h3><strong>Step 9 - </strong>CodeClimate</h3>
 <section>
 {{#if emberTutorial.checkValue_9}}
 <p></p>
