--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -1,5 +1,5 @@
 <h2>Ubuntu Tutorial</h2>
-<h3>Virtual Box & Ubuntu 14.04</h3>
+<h3><strong>Step 1 - </strong> Virtual Box & Ubuntu 14.04</h3>
 <section>
 {{#if emberTutorial.checkValue_1}}
 <p></p>
@@ -29,7 +29,7 @@ option for a quick and painless install (which only handles the created virtual 
 {{/if}}
 <div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_1}}</div>
 </section>
-<h3>Overall Dependencies</h3>
+<h3><strong>Step 2 - </strong>Overall Dependencies</h3>
 <section>
 {{#if emberTutorial.checkValue_2}}
 <p></p>
@@ -59,7 +59,7 @@ option for a quick and painless install (which only handles the created virtual 
 {{/if}}
 <div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_2}}</div>
 </section>
-<h3>Project Dependencies</h3>
+<h3><strong>Step 3 - </strong>Project Dependencies</h3>
 <section>
 {{#if emberTutorial.checkValue_3}}
 <p></p>
