Ember Cli Installation Tutorial is about 72% done

--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -1,10 +1,15 @@
-<h2>Heroku Tutorial</h2>
+<h2>Heroku Tutorial</h2>                              <a href="#" target="_blank"> </a>
 <h3><strong>Step 10 - </strong>Setup Account</h3>
 <section>
 {{#if emberTutorial.checkValue_10}}
 <p></p>
 {{else}}
-<p>First things first then... Go to <a href="https://dashboard.heroku.com/" target="_blank">Heroku Dashboard</a>. //TODO</p>
+<p>Go to <a href="https://dashboard.heroku.com/" target="_blank">Heroku Dashboard</a>, 
+and get an account ready to go... After, go back to the root of your project 
+on the terminal and do the following:</p>
+<ol>
+<li>TODO</li>
+</ol>
 {{/if}}
 <div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_10}}</div>
 </section>
