fixed Code CLimate duplication engine issue

--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -139,6 +139,9 @@ The following tools below will make maintance a breeze:</p>
     enabled: true
   duplication:
     enabled: true
+    config:
+      languages:
+      - javascript
 ratings:
   paths:
     - "app/**"
