installation segment complete

--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -53,9 +53,15 @@
 		</section>
 		<section>
 			{{#if setup_complete}}
-			<p>//TODO MOVE ON TO NEXT PAGE</p>
+			<h2>Congratulations!</h2>
+			<p><a target="_blank" href="http://imgur.com/yivF7UG"><img height=300 src="http://i.imgur.com/yivF7UG.jpg" title="source: imgur.com" /></a></p>
+			<p>Thank you for taking the time to study this guide with me! 
+			You may fly free now and customize the website, or check out some 
+			{{#link-to 'emberTutorial.addons'}}addons{{/link-to}}
+			to make your Ember Cli project even cooler! 
+			</p>
 			{{else}}
-			<p>Please check all sections as complete before continuing...</p>
+			<p>Please check all sections as complete before the surprise is revealed..</p>
 			{{/if}}
 		</section>
 	</div>
