--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -16,7 +16,9 @@
 						<ul class="dropdown-menu">
 							<li>{{#link-to 'emberTutorial'}}Tutorial Page{{/link-to}}</li>
 							<li role="separator" class="divider"></li>
-							<li>{{#link-to 'emberTutorial.installation'}}Install Requirements{{/link-to}}</li>
+							<li>{{#link-to 'emberTutorial.installation'}}Install, Test & Deploy{{/link-to}}</li>
+							<li>{{#link-to 'emberTutorial.addons'}}Addons{{/link-to}}</li>
+							<li>{{#link-to 'emberTutorial.more'}}More{{/link-to}}</li>
 						</ul>
 					</li>
 					<li class="dropdown">
