forgot to rename a  button

--- a/app/templates/ember-tutorial/index.hbs
+++ b/app/templates/ember-tutorial/index.hbs
@@ -28,7 +28,7 @@ the technologies that powers this same dynamic has been rather slow to change al
 			<article>
 				<p>If you search around, you will find several Ember Cli guides that focus on many wonderful things that Ember.js does including data handling and form entry. However, this guide will take another direction.</p>
 				<p>The goal here is to create a small one page web app portfolio website that will not only be live on Heroku, but also go through a testing server every time you make changes to the source code on Github. </p>
-				{{#link-to 'emberTutorial.installation' class="button2" }}Installing the requirements{{/link-to}}
+				{{#link-to 'emberTutorial.installation' class="button2" }}Install, Test & Deploy{{/link-to}}
 			</article>
 		</section>
 	</div>
