--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -2,13 +2,12 @@
 	<nav class="navbar navbar-default" id="navbar">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				</button>
+				<button type="button" id="collapsed-button-1" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">Menu</button>
 				{{#link-to 'index' class="navbar-brand" id="navbar_brand"}}Deo's Website{{/link-to}}
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<div class="collapse navbar-collapse" id="navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>{{#link-to 'archives'}}Archives Page{{/link-to}}</li>
 					<li class="dropdown">
