--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -1,16 +1,12 @@
 <footer>
-	<nav>
-		<ul>
-			<li>
-				{{#link-to 'about'}}About{{/link-to}}
-			</li>
-			<li>
-				<a href="http://deovandski.blogspot.com/">My Blog</a>
-			</li>
-			<li>
-				<a href="https://github.com/Deovandski?tab=repositories">Github Page</a>
-			</li>
-		</ul>
-	</nav>
-	<label>Copyright© Deovandski 2016</label>
+		<div class="container-fluid">
+			<div class="navbar">
+				<div class="navbar-brand">{{#link-to 'about'}}About{{/link-to}}</div>
+				<div class="navbar-brand"><a href="https://github.com/Deovandski?tab=repositories">Github Page</a></div>
+				<div class="navbar-brand"><a href="http://deovandski.blogspot.com/">My Blog</a></div>
+			<div class="collapse navbar-collapse" id="navbar-collapse-2">
+					<div class="nav navbar-nav navbar-right navbar-brand">Copyright© Deovandski 2016</div>
+			</div>
+			</div>
+		</div>
 </footer>
